Disable clicks on anchor links that have the disabled attribute
Note, supposedly this works in mobile safari, but after testing on my iPad it still navigates to the link despite being disabled.

--- a/src/FoxyBalance.Server/WebRoot/main.css
+++ b/src/FoxyBalance.Server/WebRoot/main.css
@@ -9,3 +9,9 @@
 .amount.debit {
     color: red;
 }
+
+/*Disable clicks on anchor links with the disabled attribute.
+  If you don't turn off pointer events, users will still be able to click on them and follow the link. */
+a[disabled] {
+    pointer-events: none;
+}
